--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 Just my emacs setup.
+-- Rather, it used to be.  This repository is dark and full of obsolescence.  dotemacs is the repository you are looking for.
